refactor: API 성공 응답 포맷 리팩터링 (#83)
* feat: 공통 api 포맷 성공 케이스 구현

- 공통 API 응답은 code, message, data로 이루어진다

* refactor: AuthController 성공 응답 포맷 변경

* refactor: StatsController 성공 응답 포맷 변경

* refactor: UploadController 성공 응답 포맷 변경

* refactor: SpaceController 성공 응답 포맷 변경

* refactor: ProductController 성공 응답 포맷 변경

* refactor: GuestBookController 성공 응답 포맷 변경

* refactor: 방명록 신고 관련 API 성공 응답 포맷 변경